# utility-engineering

./: README.md  experiment_config.json  experiment_config.yaml  pyproject.toml  results.md
analysis/: plot_scores.py  results.md
configs/: global_values_override.json  strategy_comparison.json
data/: mock_responses.json  scenarios.json  scenarios.yaml
reports/: global_values_override.json  strategy_comparison.json
scripts/: run_experiments.py
src/pref_gap_experiments/: __init__.py  config.py  datasets.py  evaluation.py  experiments.py  llm.py  strategies.py
tests/: test_experiment_runner.py
