[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pref-gap-experiments"
version = "0.1.0"
description = "Harness for studying stated vs revealed preference gaps in LLMs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
